infrastructure/traefik/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: traefik
spec:
  controllerName: traefik.io/gateway-controller
  parameters:
    apiGroup: traefik.io
    kind: TraefikGatewayClassConfig
    name: traefik-config
